--- a/Documents/biblioteca/package.json
+++ b/Documents/biblioteca/package.json
@@ -7,9 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
+    "mongoose": "^9.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
@@ -26,5 +29,10 @@
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.2.5"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
